<resources>
    <string name="app_name">Postboy</string>

    <string name="request_fragment" translatable="false">Request fragment</string>
    <string name="response_fragment" translatable="false">response fragment</string>


    <string name="send" translatable="false">send</string>
    <string name="request_method" translatable="false">Request Method</string>
    <string name="enter_request_url" translatable="false">Enter request URL</string>
    <string name="main_view_headers" translatable="false" >Headers</string>
    <string name="main_view_add" translatable="false" >Add</string>
    <string name="main_view_parameters" translatable="false" >Parameters</string>
    <string name="main_view_key" translatable="false" >Key</string>
    <string name="main_view_value" translatable="false" >Value</string>
    <string name="main_view_remove" translatable="false" >Remove</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="title_body" translatable="false" >Body</string>
    <string name="enter_body" translatable="false" >Enter body</string>
    <string name="response_code" translatable="false" >Code</string>
    <string name="response_time" translatable="false" >Time</string>

    <string name="basic_error_text">Something went wrong</string>
    <string name="pre_loader_description_text_default">Loading…</string>
    <string name="no_network_error_text">No Internet connection</string>
    <string name="sing_up_basics_error_dialog_title_default">Error</string>
    <string name="sing_up_basics_error_dialog_message_default">Sorry, some error occur</string>
    <string name="message_dialog_default_cancel_button_text" translatable="false" >OK</string>
    <string name="requests_will_be">Your requests will be displayed here.</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_rest" translatable="false">REST</string>
    <string name="nav_history">History</string>
    <string name="nav_about">About</string>
    <string name="nav_privacy_policy">Privacy policy</string>
    <string name="browser_not_found">No default browser was found on your device.</string>

    <string-array name="methods_array" translatable="false">
        <item>GET</item>
        <item>POST</item>
        <!--<item>HEAD</item>-->
        <item>PUT</item>
        <item>DELETE</item>
        <!--<item>PATCH</item>-->
    </string-array>

    <string-array name="http_array" translatable="false">
        <item>https://</item>
        <item>http://</item>
    </string-array>

    <string-array name="body_type_array" translatable="false">
        <item>text</item>
        <item>json</item>
    </string-array>

</resources>
