<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textViewKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/main_view_key"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textNoSuggestions"
            app:backgroundTint="@color/colorPrimary"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textViewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/main_view_value"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textNoSuggestions"
            app:backgroundTint="@color/colorPrimary"/>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_selectable_item"
            android:contentDescription="@string/main_view_remove"
            android:onClick="onClickDeleteParameters"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_remove_circle_outline_black_24dp"/>
</LinearLayout>